fix: repair de overflow

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -7,7 +7,7 @@
     position: relative;
     max-height: 70rem;
     min-height: 50rem;
-
+    overflow: hidden;
 
     .overlay{
         position: absolute;
